[JSC][armv7] Fix DFG {NewSet,NewMap} assertions https://bugs.webkit.org/show_bug.cgi?id=262181

Reviewed by Yusuke Suzuki.

These asserts seem to be useful only for `CPU(ARM64)` and they're not true on
32-bit; rather than make them portable, sink them to where they're needed.

* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:

Canonical link: https://commits.webkit.org/268525@main